Close attribution div tag

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           target="_blank"
           >PeX06</a
         >.
+      </div>
     </footer>
     <div class="pattern bottom-pattern"></div>
   </body>
